# tree-sitter-jj

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-jj.pc.in  tree-sitter-jjtemplate.pc.in
bindings/c/tree_sitter/: tree-sitter-jj.h  tree-sitter-jjtemplate.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jj/: __init__.py  binding.c
bindings/python/tree_sitter_jjtemplate/: binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJjTemplateTests/: TreeSitterJjTemplateTests.swift
bindings/swift/TreeSitterJjTests/: TreeSitterJjTests.swift
src/: grammar.json  node-types.json  parser.c
